Fix minimize button sliding into the wrong position when exiting tablet mode

When PWA menu buttons are visible in the title bar we fail to animate the
minimize button to the correct position when exiting tablet mode.

This CL fixes the bug by removing the assumption that the minimize button
is the left-most button.

Bug: 802144
Change-Id: I8ad560c966f9b0fa04beabcf6b96850fe784b5aa